Support gradle incremental compiling in annotation processors